[build-system]
requires = ["poetry>=1.7.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "onyx-homeassistant-integration"
version = "10.4.1"
description = "Home Assistant Integration for Hella's ONYX.CENTER API."
license = "MIT"
authors = [
    "Daniel Muehlbachler-Pietrzykowski <daniel.muehlbachler@niftyside.io>",
]
readme = "README.md"
repository = "https://github.com/muhlba91/onyx-homeassistant-integration"
keywords = ["hella", "onxy", "homeassistant"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
]

[tool.poetry.dependencies]
python = ">=3.12,<3.14"
onyx-client = "^9.2.0"

[tool.poetry.dev-dependencies]
pytest = "^8.0.0"
pytest-cov = { extras = ["toml"], version = "^6.0.0" }
coverage = { extras = ["toml"], version = "^7.0.0" }
pre-commit = "^4.0.0"
pytest-asyncio = "^0.24.0"
aioresponses = "^0.7.4"
homeassistant = "^2024.11.0"
ruff = "^0.8.0"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "--strict-markers --cov=custom_components"
testpaths = ["tests"]
norecursedirs = [".git"]

[tool.coverage.run]
relative_files = true
source = ["custom_components"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplemented()",
    "if __name__ == .__main__.:",
    "main()",
    "parser\\..",
    "argparse\\..",
]
fail_under = 91
show_missing = true
